# topos

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  glama.json  install.sh  pyproject.toml
.agents/: AGENTS.md
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.github/ISSUE_TEMPLATE/: bug_report.yml  cicd.yml  cli.yml  feature_request.yml  mcp.yml  methods.yml  refactor.yml
.github/workflows/: ci.yml  clawhub-publish.yml  docs.yml  openwiki.yml  release.yml
.mcp/: server.json
benchmarks/: README.md  run_bench.py
benchmarks/calibration/: README.md
crates/topos-cli/: Cargo.toml
crates/topos-cli/src/: main.rs
crates/topos-cli/src/commands/: compare.rs  coverage.rs  evaluate.rs  graphify.rs  inspect.rs  lang.rs  mod.rs
crates/topos-core/: Cargo.toml
crates/topos-core/src/: config.rs  lib.rs
crates/topos-core/src/adapters/: discovery.rs  gitnexus.rs  mod.rs  process.rs
crates/topos-core/src/core/: category.rs  characteristic_morphism.rs  mod.rs  morphism.rs  object.rs  omega.rs
crates/topos-core/src/evaluation/: characteristic_morphism.rs  file_roles.rs  mod.rs  preferences.rs  suggestions.rs  suppression.rs
crates/topos-core/src/evaluation/policies/: base.rs  calibration.rs  composable.rs  gates.rs  mod.rs  secure.rs  simple.rs
crates/topos-core/src/functors/: mod.rs
crates/topos-core/src/functors/probes/: mod.rs
crates/topos-core/src/functors/probes/ast/: complexity.rs  entropy.rs
crates/topos-core/src/functors/probes/cfg/: homology.rs
crates/topos-core/src/functors/probes/cpg/: danger.rs  taint.rs
crates/topos-core/src/functors/probes/graphify/: mod.rs
crates/topos-core/src/functors/probes/mdg/: coupling.rs  fan.rs  mod.rs
crates/topos-core/src/functors/probes/process/: curvature.rs
crates/topos-core/src/functors/probes/uast/: abstractness.rs  mod.rs  signature.rs
crates/topos-core/src/functors/profunctors/ast/: compare.rs  mod.rs
crates/topos-core/src/functors/profunctors/cfg/: compare.rs  mod.rs
crates/topos-core/src/functors/profunctors/cpg/: mod.rs
crates/topos-core/src/functors/profunctors/mdg/: compare.rs
crates/topos-core/src/graphs/: mod.rs
crates/topos-core/src/graphs/ast/: dispatch.rs  mod.rs  object.rs  types.rs
crates/topos-core/src/graphs/cfg/: builder.rs  models.rs  object.rs
crates/topos-core/src/graphs/cpg/: builder.rs  models.rs  object.rs
crates/topos-core/src/graphs/mdg/: mod.rs  models.rs  object.rs
crates/topos-core/src/graphs/pdg/: mod.rs  object.rs
crates/topos-core/src/graphs/process/: mod.rs
crates/topos-core/src/graphs/uast/: mapper_common.rs  mapper_cpp.rs  mapper_go.rs  mapper_javascript.rs  mapper_python.rs  mapper_rust.rs  mapper_typescript.rs  models.rs
crates/topos-mcp/: Cargo.toml
crates/topos-pyo3/: Cargo.toml
crates/topos-pyo3/src/: cfg.rs  convert.rs  core.rs  frc.rs  graphs.rs  lib.rs  probes_ast.rs  probes_complexity.rs  profunctors.rs  security.rs  uast.rs
demos/: .gitignore  README.md  run_all.py
demos/binarytrees/: README.md  compare_asts.py  get_asts.py
demos/libraries/: README.md  run_all.py
demos/sensitivity/: README.md  curate.py
demos/structural_test_coverage/: EVALUATION.md  README.md  run_evaluation.py
docs/: agent-cost-savings-experiment.md  calibration.md  cli-startup-benchmarks.md  composable-incremental-spike.md  ect-coverage-feasibility-report.md  ect-coverage-release-sizes.md  parity.md  process-flow-spike.md  pyinstaller-onefile-vs-onedir.md  refactor-suite.md  structural-test-coverage.md  uast-industry-standards.md
docs/decisions/: composable-by-default.md  composable-incremental-spike.md  structural-test-coverage.md  (+1 more)
evaluations/: topos_mcp.xml
openwiki/: .last-update.json  index.md  quickstart.md  source-map.md
scripts/: bench_mdg_loaders.py  benchmark_perf.py  build-binary.sh  cargo_publish_dry_run.sh  check_skill.py  check_versions.py  lazy_exports.py  parity_check.py
src/: cfg.rs  frc.rs  lib.rs  ph.rs  probes_ast.rs  profunctors.rs  uast.rs
tests/: __init__.py  test_ast_metrics.py  test_cli.py  test_core.py  test_depgraph_metrics.py  test_graphs.py  test_logic.py  test_metrics.py  test_multilang_ast.py  test_representations.py  test_server.py  test_structural_test_coverage.py  test_uast_comparison.py  test_utils.py  test_version.py
topos/: __init__.py  _version.py  config.py
topos/cli/: Cargo.toml  diagnostics.py  evaluation.py  installation.py  main.py  update.py
topos/cli/commands/: coverage.py  quality.py  refactor.py  system.py
topos/cli/src/: main.rs
topos/cli/src/commands/: classify.rs  compare.rs  composable.rs  coverage.rs  depgraph.rs  evaluate.rs  graphify.rs  inspect.rs  lang.rs  mcp.rs  mod.rs  render.rs
topos/cli/src/commands/depgraph/: generate.rs
topos/cli/src/commands/graphify/: generate.rs  orphans.rs
topos/mcp/: Cargo.toml  cache.py  diagnostics.py  evaluation.py  formatting.py  metric_locations.py  refactor_hotspots.py  refactor_metric_specs.py  refactor_targets.py  schemas.py  security.py  security_findings.py  server.py  snapshots.py
topos/mcp/docs/content/: metrics.md  preferences.md
topos/mcp/prompts/: refactor.py
topos/mcp/resources/: docs.py
topos/mcp/resources/content/: agent-contract.md  lattice.md  metrics.md  priority.md  workflows.md
topos/mcp/src/: context_budget.rs  diagnostics.rs  docs.rs  evaluation.rs  formatting.rs  lib.rs  metric_locations.rs  refactor_hotspots.rs  refactor_targets.rs  schemas.rs  security.rs  security_findings.rs  server.rs  sighthound.rs  snapshots.rs
topos/mcp/src/evaluation/: classify.rs  depgraph.rs  freshness.rs  gitref.rs  mod.rs
topos/mcp/src/tools/: assess.rs  compare.rs  coverage.rs  depgraph.rs  evaluate.rs  graphify.rs  inspect.rs  mod.rs  preferences.rs  refactor.rs
topos/mcp/tools/: __init__.py  assess.py  compare.py  coverage.py  depgraph.py  docs.py  evaluate.py  inspect.py  preferences.py  refactor.py
topos/mcp/tools/assess/: __init__.py  changeset.py  core.py  render.py  snapshot.py  worktree.py
topos/mcp/tools/evaluate/: __init__.py  core.py  project.py  render.py
(+574 files in other folders)
