[package]
name = "topos-functors"
version = "0.3.5"
edition = "2021"

[lib]
name = "topos_functors"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
tree-sitter = "0.23"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
