[project]
name = "topos-mcp"
dynamic = ["version"]
description = "Structural code quality metrics for agent-written programs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Krv Labs", email = "team@krv.ai"}]
keywords = ["code-quality", "static-analysis", "category-theory", "topos", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-typescript>=0.23",
    "click>=8.1",
    "fastmcp>=3.0.0",
    "numpy>=1.24",
    "ladybug>=0.17.0,<0.18",
]

[project.optional-dependencies]
ect-coverage = [
    "fastembed",
    "trailed>=0.1.3",
]

[project.scripts]
topos = "topos.cli.main:cli"
topos-mcp = "topos.mcp.server:main"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Version comes from [package].version in Cargo.toml (see scripts/check_versions.py).
features = ["pyo3/extension-module"]
python-source = "."
module-name = "topos.topos_functors"

[tool.ruff]
src = ["topos"]
line-length = 88
extend-exclude = [
    "tests/fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=topos --cov-report=term-missing"
norecursedirs = ["tests/fixtures"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "fastembed",
    "trailed>=0.1.3",
]
docs = [
    "sphinx>=7.4,<9",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "nbsphinx>=0.9.5",
    "sphinx-copybutton>=0.5.2",
]
