[project]
name = "topos-mcp"
dynamic = ["version"]
description = "Topos MCP server — structural code-quality tools (SIMPLE/COMPOSABLE/SECURE) for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Krv Labs", email = "team@krv.ai"}]
keywords = ["code-quality", "static-analysis", "category-theory", "topos", "ast", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

# Thin wrapper: the MCP server is a self-contained Rust binary (topos-mcp),
# built from `crates/topos-mcp` and installed as the `topos-mcp` console
# command by maturin's `bin` bindings. There is no Python runtime dependency
# and no Python import surface — `pip install topos-mcp` simply puts the
# compiled stdio MCP server on PATH. All computation lives in `topos-core`
# (PR #159); nothing is marshalled through Python anymore.
dependencies = []

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Version comes from [workspace.package].version in Cargo.toml
# (see scripts/check_versions.py). `bindings = "bin"` packages the
# `topos-mcp` binary itself into the wheel rather than a Python extension.
manifest-path = "crates/topos-mcp/Cargo.toml"
bindings = "bin"

[dependency-groups]
docs = [
    "sphinx>=7.4,<9",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "nbsphinx>=0.9.5",
    "sphinx-copybutton>=0.5.2",
]
