[project]
name = "topos-mcp"
dynamic = ["version"]
description = "Topos MCP server — structural code-quality tools (SIMPLE/COMPOSABLE/SECURE) for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Krv Labs", email = "team@krv.ai"}]
keywords = ["code-quality", "static-analysis", "category-theory", "topos", "ast", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

# Thin wrapper: the MCP server is a self-contained Rust binary (topos-mcp),
# built from `topos/mcp` and installed as the `topos-mcp` console
# command by maturin's `bin` bindings. There is no Python runtime dependency
# and no Python import surface — `pip install topos-mcp` simply puts the
# compiled stdio MCP server on PATH. All computation lives in `topos-engine`
# (PR #159); nothing is marshalled through Python anymore.
dependencies = []

# Build-time only (Sphinx docs site, docs.krv.ai) — not a runtime dependency
# of the published `topos-mcp` wheel. See `.github/workflows/docs.yml` and
# `docs/source/`.
[dependency-groups]
docs = [
    "sphinx>=7.4,<9",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-copybutton>=0.5.2",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Version comes from [workspace.package].version in Cargo.toml
# (see scripts/check_versions.py). `bindings = "bin"` packages the
# `topos-mcp` binary itself into the wheel rather than a Python extension.
manifest-path = "topos/mcp/Cargo.toml"
bindings = "bin"

