[package]
name = "topos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust CLI for Topos structural code quality evaluation (binary name: topos)."

[[bin]]
name = "topos"
path = "src/main.rs"

[dependencies]
topos-core = { path = "../topos-core" }
clap = { version = "4", features = ["derive"] }
# Already a topos-core dependency; used here for --json output.
serde_json = "1.0"
