[package]
name = "topos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structural code quality engine for Topos: category-theoretic evaluation (SIMPLE/COMPOSABLE/SECURE), graph representations, and refactoring probes. No Python bindings — see topos-pyo3."

[dependencies]
tree-sitter = "0.23"
# Temporary: core::morphism bootstraps single-language (Python) parsing
# directly until graphs::ast::dispatch lands (issue #142) and takes over
# multi-language parsing. Drop this dependency from topos-core once that
# module owns all tree-sitter-python usage.
tree-sitter-python = "0.23"
