[package]
name = "topos-functors"
version.workspace = true
edition.workspace = true

[lib]
name = "topos_functors"
crate-type = ["cdylib"]

[dependencies]
topos-core = { path = "../topos-core" }
pyo3 = { version = "0.29.0", features = ["extension-module"] }
tree-sitter = "0.23"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
