[package]
name = "topos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Rust CLI for Topos structural code quality evaluation (binary name: topos)."
keywords = ["code-quality", "static-analysis", "topos", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "topos"
path = "src/main.rs"

[dependencies]
topos-engine = { workspace = true }
# The `topos mcp` subcommand launches the in-process Rust MCP server, so the
# `topos` binary bundles the same server the standalone `topos-mcp` binary
# exposes (the VS Code extension invokes `topos mcp`).
topos-mcp = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
# Already a topos-engine dependency; used here for --json output.
serde_json = "1.0"
